# libfastpaxos

./: AUTHORS  CMakeLists.txt  COPYING  README.textile  leader_main  proposer_main
include/: config.h  config_highspeed.h  config_slow_debug.h  libpaxos.h
src/lib/: acceptor_disk_helpers.c  leader.c  learner.c  proposer.c
src/test/: leader_main.c  learner_main.c  proposer_main.c
